--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
+    "eslint-plugin-react": "^7.22.0",
     "typescript": "^4.2.3"
   }
 }
